index.css
body {
  background-color: #222326;
  color: white;
  font-family: 'Sen', Arial, Helvetica, sans-serif;
  text-align: center;
  overflow-x: hidden;
}

button{
  /*font-family: Arial, Helvetica, sans-serif;*/
  background-color: white;
  border-radius: 12px;
  border: none;
  color: black;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 2px;
  font-weight: bold;
}

p {
  font-weight: normal;
  color: #99aab5;
}

h5 {
  color: #99aab5;
}

h1 {
/*  border-bottom-style: solid;
  border-bottom-color: #99aab5;
  border-bottom-width: 1px;*/
  /*display: inline-block;*/
}

select {
  font-family: 'Sen', Arial, Helvetica, sans-serif;
  font-size: 24px;
  border-radius: 12px;
  background-color: #202225;
  border-style: none;
  color: white;
}

button:hover {
  /*background-color: white;*/
  cursor:pointer;
}

button:focus {
  outline: none;
}

button:active {
  background-color: grey;
  /*color: white;*/
}

textarea {
  resize: none;
  border-radius: 12px;
  border: none;
  color: black;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 2px;
  font-weight: bold;
}

img {
  border-radius: 12px;
  /*border-color:  #99aab5;*/
  /*border-width: 5px;*/
  /*border-style: solid;*/
  margin: auto;
  box-shadow: 0 5px 10px rgb(0 0 0 / 0.2);
}

#special {
  background-color: #99aab5;
  border-radius: 12px;
  border: none;
  color: #2c2f33;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 20px;
  margin: 5px;
  font-weight: bold;
}

a {
  /*color: deepskyblue;*/
  display: inline-block;
  background-color: hsl(225deg 6% 27%);
  color: white;
  padding: 0.7em;
  margin: 0.2em;
  border-radius: 12px;
  text-decoration: none;
  box-shadow: 0 5px 10px rgb(0 0 0 / 0.2);
  max-width: fit-content;
  transition: scale 0.1s;
  overflow: hidden;
}

span {
  color: #3ca45c;
  background-color: #202225;
  /*background-color: #3ca45c;*/
  /*font-family: monospace;*/
}

.new {
/*  color: red;*/
/*  background-color: #ee4245;*/
/*background-color: #3ca45c;*/
  color: white;
  padding: 15px;
/*  border-radius: 12px;*/
  scale: 200%;
  margin-right: 5px;
}

a:hover > .new {
  background-color: #ee4245;
}

a:hover {
/*  text-decoration: underline;*/
  color: deepskyblue;
/*  outline: 1px solid hsl(225deg 6% 35%);*/
/*  background: linear-gradient(hsl(225deg 6% 27%), hsl(225deg 6% 23%));*/
/*  background-color: hsl(225deg 6% 23%);*/
  scale: 105%;
}

a:active {
  box-shadow: none;
  transform: translateY(5px);
}

#copy {
  font-size: 20px;
  background-color: #3ca45c;
  color: white;
}

#copy:active {
  background-color: #2c7743;
}


.reset {
  background-color: #ee4245;
  color: white;
  padding: 0;
}

.reset:active {
  background-color: #cd1316;
}

.look-at-these-guns  {
  display: flex;
  justify-content: center;
  background-color: #2c2f33;
}

.name span {
  font-size: 20px;
  display: block;
  background: none;
  color: #99aab5;
  /*transform: scale(2);*/
}


.highlighted {
  background-color: hsl(225deg 6% 22%);
  border-radius: 12px;
  padding: 1px;
  box-shadow: 0 5px 10px rgb(0 0 0 / 0.2);
}

main {
  display: flex;
  flex-direction: column;
  min-height: 95vh;
  max-width: 840px;
  margin: 0 auto;
  padding: 20px;
  justify-content: center;
  box-sizing: border-box;
}

main > div {
  background-color: #2c2f33;
  border-radius: 12px;
  box-shadow: 0 5px 10px rgb(0 0 0 / 0.2);
  padding: 20px;
}

main > div::before {
  content: "how are you seeing this";
  position: absolute;
  top: 50%;
  width: 100vw;
  height: 100px;
  transform: translate(-50%, -50%);
  z-index: -1;
  background-color: #3ca45c;
  opacity: 0.5;
}



/*main > div::after {
  content: " ";
  position: absolute;
  top: 50%;
  width: 100px;
  height: 100vh;
  transform: translate(-450%, -50%);
  z-index: -1;
  background-color: #3ca45c;
  opacity: 0.5;
}*/

